rnsc/test_data/integration/error/parser/type_hints/zero_index/trailing_tokens.rns
.class @zero_idx tailing_token
.super java/lang/Object